# CSPBridgeGimp

./: .clang-format  .gitignore  CLAUDE.md  Doxyfile  README.md  meson.build  plugins.json
.claude/: settings.json  settings.local.json
.claude/agents/: cpp-systems-engineer.md  csp-plugin-engineer.md  gimp-protocol-engineer.md  project-leader.md
.claude/hooks/: block-local-settings-commit.sh  check-python.sh  format-cpp.sh
.claude/skills/gimp-ref/: SKILL.md
.claude/skills/phase-step/: SKILL.md
config/: bridge_config.json
docs/: GIMP_Bridge_Summary.md  e2e_debug.md  gimp3_plugin_availability.md  spec.md  spec_test.md
scripts/: list_plugin_ids.py  read_config.py
src/config/: config.cpp  config.h
src/csp/: buffer.cpp  buffer.h  plugin_entry.cpp  plugin_entry.h
src/host/: pdb_stubs.cpp  pdb_stubs.h  tile_transfer.cpp  tile_transfer.h
src/ipc/: process.cpp  process.h  wire_io.cpp  wire_io.h
src/plugins/: blinds.cpp  checkerboard.cpp  despeckle.cpp  plugin_iface.cpp  plugin_iface.h
subprojects/packagefiles/gimp/: README.txt
tests/: test_buffer.cpp  test_config.cpp  test_pdb_stubs.cpp  test_plugin_iface.cpp  test_tile_transfer.cpp  test_wire_io.cpp
tools/: test_checkerboard.cpp
tools/scanner/: scan_and_select.py  test_wire.py
